<menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:oppiamobile="http://schemas.android.com/apk/res-auto" >
    <item android:id="@+id/menu_settings"
        android:title="@string/menu_settings"
        android:icon="@android:drawable/ic_menu_preferences"/>
    <item android:id="@+id/menu_download"
        android:title="@string/menu_download"
        android:icon="@android:drawable/ic_menu_add"/>
    <item android:id="@+id/menu_language"
        android:title="@string/menu_language"
        android:icon="@drawable/ic_menu_start_conversation" />
    <item android:id="@+id/menu_about"
        android:title="@string/menu_about"
        android:icon="@android:drawable/ic_menu_info_details" />
    <item android:id="@+id/menu_help"
        android:title="@string/menu_help"
        android:icon="@android:drawable/ic_menu_help" />
     <item android:id="@+id/menu_monitor"
        android:title="@string/menu_monitor" />
    <item android:id="@+id/menu_logout"
        android:title="@string/menu_logout"
        android:icon="@drawable/ic_action_logout"/>
</menu>
